# mm-activity-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  req.txt  requirements.txt
.github/workflows/: build.yml
src/: __init__.py
src/config/: config.py  db.py  logger.py
src/mm_activity_service/: app.py  run.py  utils.py
src/mm_activity_service/config/: config.py  consul.py  cors.py  db.py  logger.py
src/mm_activity_service/controller/: hello_controller.py
src/mm_activity_service/events/: models.py  publisher.py
src/mm_activity_service/preference/: controller.py  preference.py
src/mm_activity_service/rating/: controller.py  rating.py
src/mm_activity_service/watchlist/: controller.py  watchlist.py
