[project]
name = "mm-activity-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"


[tool.poetry]
packages = [{include = "mm_activity_service", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

aniso8601 = "^10.0.0"
attrs = "^25.1.0"
blinker = "^1.9.0"
click = "^8.1.8"
dnspython = "^2.7.0"
flask = "^3.1.0"
flask-restful = "^0.3.10"
flask-restx = "^1.3.0"
flask-cors = "^4.0.0"
importlib-resources = "^6.5.2"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.5"
jsonschema = "^4.23.0"
jsonschema-specifications = "^2024.10.1"
markupsafe = "^3.0.2"
pymongo = "^4.11.1"
python-dotenv = "^1.0.1"
pytz = "^2025.1"
referencing = "^0.36.2"
rpds-py = "^0.23.1"
six = "^1.17.0"
typing-extensions = "^4.12.2"
werkzeug = "^3.1.3"
mongoengine = "^0.29.1"
pillow = "^11.3.0"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.5"

[tool.poetry.scripts]
start = 'mm_activity_service.run:run'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
